--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -289,7 +289,7 @@
 						button.col-lg-3.col-md-3.col-sm-6.col-xs-6.btn.btn-danger.btn-sharp.btn-lg.pull-right.text-justify(ng-click="proceedCheckout()") 送出結帳
 						button.btn.btn-default.btn-lg.btn-success.btn-sharp(ng-click="to_show_next_process = false; goToAnchor('checkout_cart_table')") 返回
 				form(method="post", id="cathay_order_form", action="https://sslpayment.uwccb.com.tw/EPOSService/Payment/OrderInitial.aspx")
-					input(type='hidden', name='strRqXML', ng-value="cathay_strRqXML")
+					input(type='hidden', id='strRqXMLID', name='strRqXML', value='')
 
 
 footer.footer
