--- a/client/components/footer/footer.jade
+++ b/client/components/footer/footer.jade
@@ -1,7 +1,4 @@
-.container
-  p
-    | Angular Fullstack v3.3.0-beta.0
-    = ' | '
-    a(href='https://twitter.com/tyhenkel') @tyhenkel
-    = ' | '
-    a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
+div.navbar.navbar-default.navbar-static-bottom
+	div.container
+		p.navbar-text.pull-left Go to Vecs Gardenia, Enjoy Vecs Gardenia, Love Vecs Gardenia.
+		a.navbar-btn.btn.btn-danger.pull-right(href='https://github.com/NeoNeoHo') Subscribe on Vecs Gardenia
