--- a/client/components/footer/footer.jade
+++ b/client/components/footer/footer.jade
@@ -1,4 +1,4 @@
 div.navbar.navbar-default.navbar-static-bottom
 	div.container
 		p.navbar-text.pull-left Go to Vecs Gardenia, Enjoy Vecs Gardenia, Love Vecs Gardenia.
-		a.navbar-btn.btn.btn-danger.pull-right(href='https://github.com/NeoNeoHo') Subscribe on Vecs Gardenia
+		a.navbar-btn.btn.btn-default.pull-right(href='https://github.com/NeoNeoHo') Subscribe on Vecs Gardenia
