update ui-router for checkout process

--- a/client/app/checkout/checkout.jade
+++ b/client/app/checkout/checkout.jade
@@ -18,7 +18,7 @@ navbar
 						a(ui-sref-active="active", ui-sref=".success")
 							span 3
 							| 訂購成功
-				form#checkout-form.form-horizontal(ng-submit="proceedCheckout()")
+				form#checkout-form.form-horizontal
 					div#form-views(ui-view="")
 	//- .row
 	//- 	div.col-md-2.content-left
