--- a/client/app/checkout/shipment_payment/shipment_payment.jade
+++ b/client/app/checkout/shipment_payment/shipment_payment.jade
@@ -146,7 +146,7 @@ div.panel.panel-default
 	div.well {{shipping_info}}
 .row
 	div.panel.panel-body
-		button.col-md-3.col-xs-6.btn.btn-success.btn-sharp.btn-lg.pull-right.text-justify(ng-click="proceedCheckout()", ng-disabled="checkout_disabled") 送出結帳
+		button.col-md-3.col-xs-6.btn.btn-success.btn-sharp.btn-lg.pull-right.text-justify(ng-click="proceedCheckout()") 送出結帳
 			span.glyphicon.glyphicon-circle-arrow-right
 		button.btn.btn-default.btn-lg.btn-default.btn-sharp(ui-sref="checkout.product_check") 返回
 
